vlib/v/checker/tests/array_map_fn_err_c.out
vlib/v/checker/tests/array_map_fn_err_c.vv:6:21: error: type mismatch, should use `fn(a int) T {...}`
    4 |
    5 | fn main() {
    6 |     a := [1,2,3,4].map(do_nothing)
      |                        ~~~~~~~~~~
    7 |     println(a)
    8 | }
